Fixed Avatar stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1470,6 +1470,21 @@ textarea.form-input::-webkit-resizer { display: none; }
     padding-top: 25px;
   }
 
+  .avatar-box {
+    width: 80px; /* Adjust to your desired width */
+    height: 140px; /* Adjust to your desired height */
+    overflow: hidden; /* Ensures any overflowing content is clipped */
+    border-radius: 8px; /* Optional: rounds the corners */
+  }
+  
+  .avatar-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  
   .testimonials-avatar-box {
     transform: translate(30px, -30px);
     border-radius: 20px;
